@@ -1,7 +1,7 @@
 changelog for ephFrame
 ----------------------
 
-2009-06-08
+2009-06-25
 + fixed missing created update field when inserting new model entries with multiple behaviors
 + added theming, which includes js/css search in theme directory
 + fixed js packer to append line-feed at end of packed js files
@@ -9,6 +9,9 @@ changelog for ephFrame
 + added subversion keywords and new formatted copyright message on every file
 + SGMLAttributes don’t render attributes with empty values anymore
 + DBDSN in db.php can be an array, enabling socket connections with it
++ missing afterAction callback for controller added (called after components)
++ empty cookie values return false now
++ fixed object->__mergeParentProperty to merge correctly using ->{$varname}
 
 2009-05-25
 + added model behaviors callable from every model
